show/hide todo on edit button press

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -1,3 +1,11 @@
 body {
     background-color: #f9f8f8;
 }
+
+.check-mark-container {
+    width: 1rem;
+    height: 1rem;
+    margin: 1rem 0;
+    border: 2px solid black;
+    background: transparent;
+}
