--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,2 +1,9 @@
 body {
   background-color: #f9f8f8; }
+
+.check-mark-container {
+  width: 1rem;
+  height: 1rem;
+  margin: 1rem 0;
+  border: 2px solid black;
+  background: transparent; }
