--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,21 +1,48 @@
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility; }
+
+*:after, *:before {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box; }
+
+html {
+  font-size: 16px; }
+
 body {
+  margin: 0;
+  height: 100%;
+  font-family: 'Roboto Slab', serif;
   background-color: #f9f8f8; }
 
 ul {
   padding: 0; }
 
+h1 {
+  margin: 0.5rem 0; }
+
+.container {
+  text-align: center;
+  margin: 0; }
+
 .completed {
   text-decoration: line-through; }
 
 .todo {
+  font-size: 1rem;
   display: grid;
   grid-template-columns: 10% 70% 10% 10%;
+  position: relative;
   min-height: 2rem;
-  width: 50%;
+  width: 85%;
+  margin: 0 auto;
+  padding: 1rem;
   border: 1px solid #9e9e9e;
   border-radius: 0.25rem; }
 
 .far, .fas {
+  font-size: 1.5rem;
   align-self: center;
   justify-self: center; }
 
