--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -1,6 +1,18 @@
 // Variables
 // ---------
 
+// colors
+$red: #e74c3c;
+$orange: #e67e22;
+$green: #2ecc71;
+$blue: #3498db;
+$white: #fff;
+
+$dark-blue-light: #34495e;
+$dark-blue-heavy: #2c3e50;
+
+
+// screen sizes
 $screen-xs: 26rem;
 $screen-sm: 48rem;
 $screen-md: 64rem;
@@ -64,7 +76,7 @@ $screen-xl: 100rem;
     margin: 0;
     height: 100%;
     font-family: 'Roboto Slab', serif;
-    background-color: #f9f8f8;
+    background-color: $blue;
   }
 
 ul {
@@ -72,7 +84,18 @@ ul {
 }
 
 h1 {
-    margin: 0.5rem 0;
+    color: $dark-blue-heavy;
+    margin: 0;
+}
+
+h3 {
+  color: $dark-blue-heavy;
+  margin: 0;
+}
+
+header {
+  text-align: center;
+  margin: 5rem 0;
 }
 
 
@@ -82,6 +105,52 @@ h1 {
 .container {
     text-align: center;
     margin: 0;
+}
+
+.todo-input-container {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+
+  margin: 2rem 0 2rem;
+}
+
+.todo-input {
+  height: 37px;
+
+  border: none;
+  border-top-left-radius: 7px;
+  border-bottom-left-radius: 7px;
+
+  padding: 5px 15px;
+
+  color: $dark-blue-light;
+  font-size: 1rem;
+
+  outline: none;
+  line-height: 1.5;
+}
+
+.add-todo-button {
+  border: none;
+  border-top-right-radius: 7px;
+  border-bottom-right-radius: 7px;
+
+  font-size: 2.5rem;
+  color: #ccc;
+
+  position: relative;
+
+  width: 50px;
+
+  background-color: $dark-blue-light;
+  transition: background-color 0.25s ease-out;
+
+  &:hover {
+    background-color: $dark-blue-heavy;
+    color: $blue;
+  }
 }
 
 .completed {
