--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,17 +14,58 @@ body {
   margin: 0;
   height: 100%;
   font-family: 'Roboto Slab', serif;
-  background-color: #f9f8f8; }
+  background-color: #3498db; }
 
 ul {
   padding: 0; }
 
 h1 {
-  margin: 0.5rem 0; }
+  color: #2c3e50;
+  margin: 0; }
+
+h3 {
+  color: #2c3e50;
+  margin: 0; }
+
+header {
+  text-align: center;
+  margin: 5rem 0; }
 
 .container {
   text-align: center;
   margin: 0; }
+
+.todo-input-container {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem 0 2rem; }
+
+.todo-input {
+  height: 37px;
+  border: none;
+  border-top-left-radius: 7px;
+  border-bottom-left-radius: 7px;
+  padding: 5px 15px;
+  color: #34495e;
+  font-size: 1rem;
+  outline: none;
+  line-height: 1.5; }
+
+.add-todo-button {
+  border: none;
+  border-top-right-radius: 7px;
+  border-bottom-right-radius: 7px;
+  font-size: 2.5rem;
+  color: #ccc;
+  position: relative;
+  width: 50px;
+  background-color: #34495e;
+  transition: background-color 0.25s ease-out; }
+  .add-todo-button:hover {
+    background-color: #2c3e50;
+    color: #3498db; }
 
 .completed {
   text-decoration: line-through; }
