--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -96,6 +96,10 @@ h3 {
 header {
   text-align: center;
   margin: 5rem 0;
+
+  @include desktop {
+    font-size: 1.5rem;
+  }
 }
 
 
@@ -130,6 +134,10 @@ header {
 
   outline: none;
   line-height: 1.5;
+
+  @include desktop {
+    min-width: 20%;
+  }
 }
 
 .add-todo-button {
@@ -161,26 +169,49 @@ header {
     font-size: 1rem;
 
     display: grid;
-    grid-template-columns: 10% 70% 10% 10%;
-
-    position: relative;
+    grid-template-columns: 15% 70% 15%;
 
     min-height: 2rem;
-    width: 85%;
+    width: 90%;
 
     margin: 0 auto;
     padding: 1rem;
 
-    border: 1px solid #9e9e9e;
-    border-radius: 0.25rem;
+    @include tablet {
+      width: 65%;
+    }
+
+    @include desktop {
+      font-size: 1.5rem;
+    }
+
+    @include desktop-large {
+      width: 50%;
+    }
+
+    @include desktop-xlarge {
+      width: 30%;
+    }
+}
+
+.todo__text {
+  color: #f9f8f8;
 }
 
 .far, .fas {
     font-size: 1.5rem;
     align-self: center;
     justify-self: center;
+
+    @include desktop {
+      font-size: 2.5rem;
+    }
 }
 
-.todo__text {
-    margin: auto 0;
+.fa-check-circle, .fa-circle {
+  color: $green;
+}
+
+.fa-times {
+  color: $red;
 }
